# conda-classic-solver

./: .authors.yml  .gitignore  .mailmap  .pre-commit-config.yaml  AUTHORS.md  HOW_WE_USE_GITHUB.md  LICENSE  README.md  pyproject.toml
.devcontainer/: post_create.sh  post_start.sh
.devcontainer/conda-forge/: devcontainer.json
.devcontainer/defaults/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  disclaimer.txt
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  epic.yml
.github/template-files/: config.yml
.github/workflows/: docs.yml  tests.yml
conda_classic_solver/: __init__.py  _logic.py  logic.py  plugin.py  resolve.py  solve.py  solver.py
dev/: requirements.txt
docs/: conf.py  environment.yml  index.md  robots.txt
docs/_templates/: navbar_center.html
news/: 7-%-formatting
recipe/: meta.yaml
tests/: conftest.py  requirements-ci.txt  test_logic.py  test_placeholder.py  test_solvers.py
